# eBPF_SoftCore_BSc

./: .gitignore  README.md
ebpf_emulator/: README.md
ebpf_emulator/bpf_src/: dns_filter.bpf  simple_add.bpf
ebpf_emulator/src/: CMakeLists.txt  Register.cpp  VM.cpp  VM.h  main.cpp
softcore_hdl/: README.md
softcore_hdl/src/: alu.v  ctrl.v  decoder.v  driver.v  instr_store_rom.v  ir.v  pc.v  pkt_buf.v  ram_memory.v  reg_bank.v
softcore_hdl/src/inc/: opcodes.v
thesis_writeup/src/: ebpf_asm.ext  refs.bib
thesis_writeup/src/examples/: example0.tex
